# CatCommander

./: .gitignore  BUILD.md  CLAUDE.md  CONFIG.md  CatCommander.sln  README.md  build-macos-app.sh
7z-wrapper/: ArchiveInfoManager.cpp  ArchiveInfoManager.h  CMakeLists.txt  MIGRATION.md  MyExtract.cpp  MyExtract.h  README.md  main.cpp  utils.h  wrapper.cpp  wrapper.def  wrapper.h
7z-wrapper/include/: Sz7zCWrapper.h
7z-wrapper/src/: Sz7zCWrapper.cpp
7z.net/: 7z.net.csproj  NativeLib.cs
7z.net/lib/: 7z.dylib
7z/CPP/7zip/: 7zip_gcc.mak
7z/CPP/7zip/Bundles/7z-wrapper/: Wrapper.cpp  Wrapper.h  makefile.gcc
CatCommander/: App.axaml  App.axaml.cs  CatCommander.csproj  ItemsBrowser.axaml  ItemsBrowser.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  NLog.config  Program.cs  app.manifest  config.toml
CatCommander/Assets/: Info.plist  cat.icns
CatCommander/Commands/: CommandExecutor.cs  CommandManager.cs  KeyboardHookManager.cs
CatCommander/Config/: ApplicationSettings.cs  ConfigManager.cs  PanelSettings.cs  ShortcutsSettings.cs  app.toml
CatCommander/Configuration/: AppConfig.cs  ApplicationSettings.cs  ConfigManager.cs  Shortcuts.cs  ShortcutsSettings.cs
CatCommander/Models/: FileItemModel.cs  IFileSystemItem.cs
CatCommander/Services/: LoggingService.cs
CatCommander/SevenZip/: SevenZipArchive.cs  SevenZipNative.cs
CatCommander/UI/: ItemsBrowser.axaml  ItemsBrowser.axaml.cs  MainPanel.axaml  MainPanel.axaml.cs
CatCommander/Utils/: ArchiveFileHelperExample.cs  FileItemTreeNode.cs  FileItemTreeNodeExample.cs  FileSystemHelper.cs  FileSystemHelperExample.cs  FileTreeNode.cs  FileTreeNodeExample.cs  MessageBox.cs
CatCommander/View/: ItemBrowser.axaml  ItemBrowser.axaml.cs  ItemsBrowser.axaml  ItemsBrowser.axaml.cs  MainPanel.axaml  MainPanel.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  MessageBox.cs
CatCommander/ViewModels/: ItemBrowserViewModel.cs  ItemsBrowserViewModel.cs  MainPanelViewModel.cs  MainViewModel.cs  MainWindowViewModel.cs
CatCommander/data/: keymap.toml  panels.toml
Experiments/: App.axaml  App.axaml.cs  CLAUDE.md  Experiments.csproj  MainWindow.axaml  MainWindow.axaml.cs  MyViewModel.cs  Program.cs  app.manifest
TestCat/: FileItemTreeNodeTests.cs  TestCat.csproj  UnitTest1.cs
cs_test/: Program.cs  cs_test.csproj
libcat/: libcat.csproj
libcat/Models/: DriveInfoModel.cs
libcat/Utils/: ArchiveFileHelper.cs  FileSystemHelper.cs  FileSystemHelperExample.cs  SystemIconProvider.cs
